fix js error on safari

--- a/src/stylesheets/objects/_front-page.scss
+++ b/src/stylesheets/objects/_front-page.scss
@@ -134,7 +134,7 @@
     &::before {
       z-index: 2;
     }
-    @include square(90%);
+    @include square;
     @include from(sm) {
       @include square(60%);
     }
